[project]
name = "redash"
version = "26.05.0-dev"
requires-python = ">=3.13"
description = "Make Your Company Data Driven. Connect to any data source, easily visualize, dashboard and share your data."
authors = [
    { name = "Arik Fraimovich", email = "<arik@redash.io>" }
]
# to be added to/removed from the mailing list, please reach out to Arik via the above email or Discord
maintainers = [
    { name = "Redash maintainers and contributors", email = "<maintainers@redash.io>" }
]
readme = "README.md"

[tool.black]
target-version = ['py38']
line-length = 119
force-exclude = '''
/(
  migrations
)/
'''

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
aniso8601 = "8.0.0"
authlib = "1.7.2"
backoff = "2.2.1"
blinker = "1.9.0"
click = "8.1.3"
cryptography = "48.0.0"
disposable-email-domains = ">=0.0.52"

# Flask 3.1.x with SQLAlchemy 1.4+ and Flask-SQLAlchemy 3.x
flask = "3.1.3"

flask-limiter = "3.3.1"
flask-login = "0.6.3"
flask-mail = "0.9.1"
flask-migrate = "4.0.7"
flask-restful = "0.3.10"
flask-sqlalchemy = "3.0.5"
flask-talisman = "0.7.0"
flask-wtf = "1.3.0"
funcy = "1.13"
gevent = "25.9.1"
greenlet = "3.3.2"
gunicorn = "22.0.0"
httplib2 = "0.19.0"
itsdangerous = "2.2.0"
jinja2 = "3.1.6"
jsonschema = "3.1.1"
markupsafe = "2.1.1"
maxminddb-geolite2 = "2018.703"
parsedatetime = "2.6"
passlib = "1.7.3"
psycopg2-binary = "2.9.11"
pyjwt = "2.12.0"
pyopenssl = "26.2.0"
pypd = "1.1.0"
pysaml2 = "7.3.1"
pystache = "0.6.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.2.2"
pytz = ">=2019.3"
pyyaml = "6.0.1"
redis = "4.6.0"
regex = "2023.8.8"
requests = "2.33.0"
restrictedpython = "8.1"
rq = "1.16.1"
pyasynchat = "1.0.5"
rq-scheduler = "0.13.1"
semver = "2.8.1"
sentry-sdk = "1.45.1"
sqlalchemy = "1.4.53"
sqlalchemy-searchable = "1.2.0"
sqlalchemy-utils = "0.38.3"
sqlparse = "0.5.4"
sshtunnel = "0.1.5"
statsd = "3.3.0"
supervisor = "4.3.0"
supervisor-checks = "0.8.1"
ua-parser = "0.18.0"
urllib3 = "2.7.0"
user-agents = "2.0"
werkzeug = "3.1.6"
wtforms = "2.2.1"
xlsxwriter = "3.2.9"
tzlocal = "4.3.1"
pyodbc = "5.3.0"
debugpy = "^1.8.9"
paramiko = "3.4.1"
pyasn1 = "0.6.3"
mako = "1.3.12"
pynacl = "1.6.2"
oracledb = "2.5.1"
ibm-db = { version = "^3.2.7", markers = "platform_machine == 'x86_64' or platform_machine == 'AMD64'" }

[tool.poetry.group.all_ds]
optional = true

[tool.poetry.group.all_ds.dependencies]
atsd-client = "3.0.5"
azure-core = ">=1.38.0"
azure-kusto-data = "5.0.1"
boto3 = "1.43.7"
botocore = "1.43.7"
cassandra-driver = "3.29.3"
certifi = ">=2019.9.11"
cmem-cmempy = "21.2.3"
databend-py = "0.4.6"
databend-sqlalchemy = "0.2.4"
duckdb = "1.3.2"
google-api-python-client = "2.190.0"
grpcio = ">=1.80.0,<2"
gspread = "5.11.2"
h11 = ">=0.16.0"
httpcore = ">=1.0.9"
impyla = "0.22.0"
influxdb = "5.2.3"
influxdb-client = "1.38.0"
marshmallow = ">=3.26.2"
memsql = "3.2.0"
mysqlclient = "2.1.1"
numpy = "2.4.2"
nzalchemy = "^11.1.2"
nzpy = ">=1.15"
oauth2client = "4.1.3"
openpyxl = "3.1.5"
pandas = "2.3.3"
phoenixdb = "1.2.2"
pinotdb = ">=0.4.5"
protobuf = "6.33.5"
pyathena = "2.25.2"
pydgraph = "25.1.0"
pydruid = "0.5.7"
pyexasol = "0.12.0"
pyhive = "0.6.1"
pyignite = "0.6.1"
pymongo = { version = "4.6.3", extras = ["srv", "tls"] }
pymssql = "^2.3.1"
pyodbc = "5.3.0"
python-arango = "6.1.0"
python-rapidjson = "1.20"
requests-aws-sign = "0.1.5"
sasl = ">=0.4a1"
simple-salesforce = "0.74.3"
snowflake-connector-python = "4.5.0"
td-client = "1.5.0"
thrift = ">=0.8.0"
thrift-sasl = ">=0.1.0"
trino = ">=0.305,<1.0"
vertica-python = "1.1.1"
xlrd = "2.0.1"
e6data-python-connector = "2.2.0"

[tool.poetry.group.ldap3]
optional = true

[tool.poetry.group.ldap3.dependencies]
ldap3 = "2.9.1"

# Optional SSRF protection (enables REDASH_ENFORCE_PRIVATE_IP_BLOCK).
# Install via `poetry install --with ssrf` or add `ssrf` to the install_groups
# build arg in the Dockerfile.
[tool.poetry.group.ssrf]
optional = true

[tool.poetry.group.ssrf.dependencies]
# Pinned to an immutable commit (champion has no PyPI release and no tags yet).
# Bump deliberately when reviewing upstream changes.
champion = { git = "https://github.com/Gee19/champion.git", rev = "74cf301bf89a88b8a55459fd8439766a11eb16f0" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "9.0.3"
coverage = "7.14.0"
filelock = ">=3.20.3"
freezegun = "1.5.5"
jwcrypto = "1.5.7"
mock = "5.0.2"
pre-commit = "4.3.0"
pygments = ">=2.20.0"
ptpython = "3.0.23"
pytest-cov = "6.0.0"
virtualenv = ">=20.36.1"
watchdog = "3.0.0"
ruff = "0.0.289"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [".git", "viz-lib", "node_modules", "migrations"]
ignore = ["E501"]
select = ["C9", "E", "F", "W", "I001", "UP004"]

[tool.ruff.mccabe]
max-complexity = 15

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
